@@ -1,0 +1,9 @@
+<?php
+define('FS_ROOT', realpath(dirname(__FILE__)));
+require_once(FS_ROOT."/../www/config.php");
+require_once(FS_ROOT."/../www/lib/framework/db.php");
+
+$db = new DB();
+$db->queryDirect("CREATE TRIGGER check_insert BEFORE INSERT ON releases FOR EACH ROW BEGIN IF NEW.searchname REGEXP '[a-fA-F0-9]{32}' OR NEW.name REGEXP '[a-fA-F0-9]{32}' THEN SET NEW.hashed = true; END IF; END;");
+$db->queryDirect("CREATE TRIGGER check_update BEFORE UPDATE ON releases FOR EACH ROW BEGIN IF NEW.searchname REGEXP '[a-fA-F0-9]{32}' OR NEW.name REGEXP '[a-fA-F0-9]{32}' THEN SET NEW.hashed = true; END IF; END;");
+
