@@ -4,8 +4,10 @@ export NZEDB_PATH="/var/www/nZEDb/misc/update_scripts"
 export HELP_PATH="/var/www/nZEDb/misc/update_scripts/nix_scripts/screen/threaded"
 export THREAD_PATH="/var/www/nZEDb/misc/update_scripts/threaded_scripts"
 export TEST_PATH="/var/www/nZEDb/misc/testing/Release_scripts"
+
 command -v php5 >/dev/null 2>&1 && export PHP=`command -v php5` || { export PHP=`command -v php`; }
-export PYTHON="$(which python)"
+command -v python3 >/dev/null 2>&1 && export PYTHON=`command -v python3` || { export PYTHON=`command -v python`; }
+
 export SCREEN="$(which screen)"
 export NZEDB_SLEEP_TIME="60"
 	   LASTOPTIMIZE=`date +%s`
@@ -29,7 +31,7 @@ do
 	fi
 
 	cd ${THREAD_PATH}
-	$PYTHON -OO ${THREAD_PATH}/binaries_threaded.py
+	$PYTHON -OOu ${THREAD_PATH}/binaries_threaded.py
 
 	cd ${HELP_PATH}
 	if ! $SCREEN -list | grep -q "RELEASES"; then
